# markupit

./: .buildinfo  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  genindex.html  index.html  markupit.html  markupit.readers.html  markupit.structure.html  markupit.writers.html  modules.html  objects.inv  poetry_usage.html  py-modindex.html  pyproject.toml  readers.html  search.html  searchindex.js  sphinx_usage.html  tox.ini  writers.html
.github/workflows/: sphinx.yml
_modules/: index.html
_modules/markupit/: cli.html  supported_types.html
_modules/markupit/readers/: base_parser.html  markdown_block_parser.html  markdown_block_reader.html  markdown_reader.html  reader.html  state.html  utils.html
_modules/markupit/structure/: block.html  content.html  document.html  enum.html  general_types.html  inline.html
_modules/markupit/writers/: json_writer.html  latex_writer.html  typst_writer.html  writer.html
_sources/: markupit.readers.rst.txt  markupit.rst.txt  markupit.structure.rst.txt  markupit.writers.rst.txt  modules.rst.txt  poetry_usage.rst.txt  readers.rst.txt  sphinx_usage.rst.txt  writers.rst.txt
docs/: poetry_usage.md  poetry_usage_for_teammates.md  sphinx_usage.md  writers.md
docs/source/: conf.py  index.rst  markup_converter.rst  markup_converter.structure.rst  markupit.rst  modules.rst  tests.rst
examples/: advanced.md  example.md  simple.md
markup_converter/: ast.py  cli.py  markup_ast.py  simple_class.py  supported_types.py
markup_converter/readers/: base_parser.py  block_parser.py  block_reader.py  markdown_block_parser.py  markdown_block_reader.py  markdown_reader.py  reader.py  state.py  utils.py
markup_converter/structure/: __init__.py  block.py  content.py  document.py  enum.py  general_types.py  inline.py  markup_ast.py
markup_converter/writers/: __init__.py  json_writer.py  latex_writer.py  typst_writer.py  writer.py
markupit/: __main__.py  cli.py  supported_types.py
markupit/readers/: __init__.py  base_parser.py  markdown_block_parser.py  markdown_block_reader.py  markdown_reader.py  reader.py  state.py  utils.py
markupit/structure/: __init__.py  block.py  general_types.py  inline.py
markupit/writers/: __init__.py  json_writer.py  latex_writer.py  typst_writer.py  writer.py
misc/ast_analysis/: gfm.json  gfm.md  gfm.tex  gfm.typ  pandoc_ast.mup
tests/: markup_ast_test.py  simple_test.py
tests/readers/: markdown_test.py
tests/structure/: document_test.py  inline_test.py
tests/writers/: latex_test.py  typst_test.py
